libui.odin


	// uiNewTableValueString() returns a new uiTableValue that contains
	// str. str is copied; you do not need to keep it alive after
	// uiNewTableValueString() returns.
	uiNewTableValueString :: proc(str: cstring) -> ^uiTableValue ---

	// uiTableValueString() returns the string stored in v. The returned
	// string is owned by v. It is an error to call this on a uiTableValue
	// that does not hold a string.
	uiTableValueString :: proc(v: ^uiTableValue) -> cstring ---

	// uiNewTableValueImage() returns a new uiTableValue that contains
	// the given uiImage.
	//
	// Unlike other similar constructors, uiNewTableValueImage() does
	// NOT copy the image. This is because images are comparatively
	// larger than the other objects in question. Therefore, you MUST
	// keep the image alive as long as the returned uiTableValue is alive.
	// As a general rule, if libui calls a uiTableModelHandler method, the
	// uiImage is safe to free once any of your code is once again
	// executed.
	uiNewTableValueImage :: proc(img: ^uiImage) -> ^uiTableValue ---

	// uiTableValueImage() returns the uiImage stored in v. As these
	// images are not owned by v, you should not assume anything
	// about the lifetime of the image (unless you created the image,
	// and thus control its lifetime). It is an error to call this on a
	// uiTableValue that does not hold an image.
	uiTableValueImage :: proc(v: ^uiTableValue) -> ^uiImage ---

	// uiNewTableValueInt() returns a uiTableValue that stores the given
	// int. This can be used both for boolean values (nonzero is true, as
	// in C) or progresses (in which case the valid range is -1..100
	// inclusive).
	uiNewTableValueInt :: proc(i: i32) -> ^uiTableValue ---

	// uiTableValueInt() returns the int stored in v. It is an error to call
	// this on a uiTableValue that does not store an int.
	uiTableValueInt :: proc(v: ^uiTableValue) -> i32 ---

	// uiNewTableValueColor() returns a uiTableValue that stores the
	// given color.
	uiNewTableValueColor :: proc(r: f64, g: f64, b: f64, a: f64) -> ^uiTableValue ---

	// uiTableValueColor() returns the color stored in v. It is an error to
	// call this on a uiTableValue that does not store a color.
	// TODO define whether all this, for both uiTableValue and uiAttribute, is undefined behavior or a caught error
	uiTableValueColor :: proc(v: ^uiTableValue, r: ^f64, g: ^f64, b: ^f64, a: ^f64) ---
}

uiTableModel :: struct {}

// TODO validate ranges; validate types on each getter/setter call (? table columns only?)
uiTableModelHandler :: struct {
	// NumColumns returns the number of model columns in the
	// uiTableModel. This value must remain constant through the
	// lifetime of the uiTableModel. This method is not guaranteed
	// to be called depending on the system.
	// TODO strongly check column numbers and types on all platforms so these clauses can go away
	NumColumns: proc "c" (^uiTableModelHandler, ^uiTableModel) -> i32,

	// ColumnType returns the value type of the data stored in
	// the given model column of the uiTableModel. The returned
	// values must remain constant through the lifetime of the
	// uiTableModel. This method is not guaranteed to be called
	// depending on the system.
	ColumnType: proc "c" (^uiTableModelHandler, ^uiTableModel, i32) -> uiTableValueType,

	// NumRows returns the number or rows in the uiTableModel.
	// This value must be non-negative.
	NumRows: proc "c" (^uiTableModelHandler, ^uiTableModel) -> i32,

	// CellValue returns a uiTableValue corresponding to the model
	// cell at (row, column). The type of the returned uiTableValue
	// must match column's value type. Under some circumstances,
	// NULL may be returned; refer to the various methods that add
	// columns to uiTable for details. Once returned, the uiTable
	// that calls CellValue will free the uiTableValue returned.
	CellValue: proc "c" (mh: ^uiTableModelHandler, m: ^uiTableModel, row: i32, column: i32) -> ^uiTableValue,

	// SetCellValue changes the model cell value at (row, column)
	// in the uiTableModel. Within this function, either do nothing
	// to keep the current cell value or save the new cell value as
	// appropriate. After SetCellValue is called, the uiTable will
	// itself reload the table cell. Under certain conditions, the
	// uiTableValue passed in can be NULL; refer to the various
	// methods that add columns to uiTable for details. Once
	// returned, the uiTable that called SetCellValue will free the
	// uiTableValue passed in.
	SetCellValue: proc "c" (^uiTableModelHandler, ^uiTableModel, i32, i32, ^uiTableValue),
}

@(default_calling_convention="c")
foreign lib {
	// @role uiTableModel constructor
	// uiNewTableModel() creates a new uiTableModel with the given
	// handler methods.
	uiNewTableModel :: proc(mh: ^uiTableModelHandler) -> ^uiTableModel ---

	// @role uiTableModel destructor
	// uiFreeTableModel() frees the given table model. It is an error to
	// free table models currently associated with a uiTable.
	uiFreeTableModel :: proc(m: ^uiTableModel) ---

	// uiTableModelRowInserted() tells any uiTable associated with m
	// that a new row has been added to m at index index. You call
	// this function when the number of rows in your model has
	// changed; after calling it, NumRows() should returm the new row
	// count.
	uiTableModelRowInserted :: proc(m: ^uiTableModel, newIndex: i32) ---

	// uiTableModelRowChanged() tells any uiTable associated with m
	// that the data in the row at index has changed. You do not need to
	// call this in your SetCellValue() handlers, but you do need to call
	// this if your data changes at some other point.
	uiTableModelRowChanged :: proc(m: ^uiTableModel, index: i32) ---

	// uiTableModelRowDeleted() tells any uiTable associated with m
	// that the row at index index has been deleted. You call this
	// function when the number of rows in your model has changed;
	// after calling it, NumRows() should returm the new row
	// count.
	// TODO for this and Inserted: make sure the "after" part is right; clarify if it's after returning or after calling
	uiTableModelRowDeleted :: proc(m: ^uiTableModel, oldIndex: i32) ---
}

// TODO reordering/moving

// uiTableModelColumnNeverEditable and
// uiTableModelColumnAlwaysEditable are the value of an editable
// model column parameter to one of the uiTable create column
// functions; if used, that jparticular uiTable colum is not editable
// by the user and always editable by the user, respectively.
uiTableModelColumnNeverEditable  :: (-1)
uiTableModelColumnAlwaysEditable :: (-2)

uiTableTextColumnOptionalParams :: struct {
	// ColorModelColumn is the model column containing the
	// text color of this uiTable column's text, or -1 to use the
	// default color.
	//
	// If CellValue() for this column for any cell returns NULL, that
	// cell will also use the default text color.
	ColorModelColumn: i32,
}

uiTableParams :: struct {
	// Model is the uiTableModel to use for this uiTable.
	// This parameter cannot be NULL.
	Model: ^uiTableModel,

	// RowBackgroundColorModelColumn is a model column
	// number that defines the background color used for the
	// entire row in the uiTable, or -1 to use the default color for
	// all rows.
	//
	// If CellValue() for this column for any row returns NULL, that
	// row will also use the default background color.
	RowBackgroundColorModelColumn: i32,
}

uiTable :: struct {}

@(default_calling_convention="c")
foreign lib {
	// uiTableAppendTextColumn() appends a text column to t.
	// name is displayed in the table header.
	// textModelColumn is where the text comes from.
	// If a row is editable according to textEditableModelColumn,
	// SetCellValue() is called with textModelColumn as the column.
	uiTableAppendTextColumn :: proc(t: ^uiTable, name: cstring, textModelColumn: i32, textEditableModelColumn: i32, textParams: ^uiTableTextColumnOptionalParams) ---

	// uiTableAppendImageColumn() appends an image column to t.
	// Images are drawn at icon size, appropriate to the pixel density
	// of the screen showing the uiTable.
	uiTableAppendImageColumn :: proc(t: ^uiTable, name: cstring, imageModelColumn: i32) ---

	// uiTableAppendImageTextColumn() appends a column to t that
	// shows both an image and text.
	uiTableAppendImageTextColumn :: proc(t: ^uiTable, name: cstring, imageModelColumn: i32, textModelColumn: i32, textEditableModelColumn: i32, textParams: ^uiTableTextColumnOptionalParams) ---

	// uiTableAppendCheckboxColumn appends a column to t that
	// contains a checkbox that the user can interact with (assuming the
	// checkbox is editable). SetCellValue() will be called with
	// checkboxModelColumn as the column in this case.
	uiTableAppendCheckboxColumn :: proc(t: ^uiTable, name: cstring, checkboxModelColumn: i32, checkboxEditableModelColumn: i32) ---

	// uiTableAppendCheckboxTextColumn() appends a column to t
	// that contains both a checkbox and text.
	uiTableAppendCheckboxTextColumn :: proc(t: ^uiTable, name: cstring, checkboxModelColumn: i32, checkboxEditableModelColumn: i32, textModelColumn: i32, textEditableModelColumn: i32, textParams: ^uiTableTextColumnOptionalParams) ---

	// uiTableAppendProgressBarColumn() appends a column to t
	// that displays a progress bar. These columns work like
	// uiProgressBar: a cell value of 0..100 displays that percentage, and
	// a cell value of -1 displays an indeterminate progress bar.
	uiTableAppendProgressBarColumn :: proc(t: ^uiTable, name: cstring, progressModelColumn: i32) ---

	// uiTableAppendButtonColumn() appends a column to t
	// that shows a button that the user can click on. When the user
	// does click on the button, SetCellValue() is called with a NULL
	// value and buttonModelColumn as the column.
	// CellValue() on buttonModelColumn should return the text to show
	// in the button.
	uiTableAppendButtonColumn :: proc(t: ^uiTable, name: cstring, buttonModelColumn: i32, buttonClickableModelColumn: i32) ---

	// uiNewTable() creates a new uiTable with the specified parameters.
	uiNewTable :: proc(params: ^uiTableParams) -> ^uiTable ---
}

